# us-post-data

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  Makefile  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: format-and-fail.yaml
bln/AK/: ak_certification_processing.R
bln/AZ/: README.md  az_certification_processing.R
bln/CA/: Makefile
bln/CA/src/: clean-leo.py  xl2csv.py
bln/FL/: fl_certification_processing.R
bln/GA/src/: clean.py
bln/ID/: Makefile  README.md
bln/ID/src/: clean-licensing.py  xl2csv.py
bln/IL/: README.md
bln/MD/: README.md  md_certification_processing.R
bln/NE/: README.md
bln/NJ/: README.md
bln/OH/: README.md
bln/OR/: README.md  or-certification-processing.R
bln/SC/: sc_certification_processing.R
bln/TN/: README.md
bln/TX/: README.md  tx_certification_processing.R
bln/UT/: ut-certification-processing.R
bln/VT/: vt-certification-processing.R
bln/WA/: README.md
db/delete/src/: delete_uploads.py  (+1 more)
db/download/: Makefile
db/preprocess/: Makefile
db/upload/: Makefile
download/: src.py
main/download/: src.py
main/standardize/: clean-filename.py
map/: generate-map.py  map.py
misconduct/georgia/: clean-bln.ipynb  clean.ipynb
normalize/download/: Makefile
normalize/src/: Makefile  src.py
preprocess/clean/: schema.yml  to-do.md
preprocess/download/: Makefile  src.py
preprocess/preprocess/: schema.yml  to-do.md
upload/: Makefile  delete_uploads.py  delete_uploads_by_file.py  delete_uploads_from_firebase.py  firebase_upload.py
(+142 files in other folders)
