[project]
name = "us-post-data"
version = "0.1.0"
description = "This repository contains scripts and notebooks for exploratory analysis of state Peace Officer Standards and Training (POST) datasets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "firebase-admin>=6.7.0",
    "fuzzywuzzy>=0.18.0",
    "google-api-core>=2.24.2",
    "nameparser>=1.1.3",
    "pandas>=2.2.3",
    "pre-commit>=4.1.0",
    "tenacity>=9.0.0",
]
